src/snapshots/rint__liveness__tests__interference_graph.snap
---
source: src/liveness.rs
expression: "format!(\"{graph}\")"
---
t0: [t1]
t1: [t0]
t2: []
res0: []
