src/snapshots/rint__liveness__tests__snapshot_liveness.snap
---
source: src/liveness.rs
expression: format_liveness(&liveness)
---
0: t0 ← 1
  uses: []
  defs: [t0]
  live_in: []
  live_out: [t0]

1: if t0 == 1 jump L0
  uses: [t0]
  defs: []
  live_in: [t0]
  live_out: [t0]

2: t1 ← 2
  uses: []
  defs: [t1]
  live_in: [t0]
  live_out: [t0, t1]

3: jump L1
  uses: []
  defs: []
  live_in: [t0, t1]
  live_out: [t0, t1]

4: L0:
  uses: []
  defs: []
  live_in: [t0]
  live_out: [t0]

5: t1 ← 3
  uses: []
  defs: [t1]
  live_in: [t0]
  live_out: [t0, t1]

6: L1:
  uses: []
  defs: []
  live_in: [t0, t1]
  live_out: [t0, t1]

7: t2 ← t0 add t1
  uses: [t0, t1]
  defs: [t2]
  live_in: [t0, t1]
  live_out: [t2]

8: return t2
  uses: [t2]
  defs: []
  live_in: [t2]
  live_out: []
